#for each .c file, add one line like: add_executable(name, file_name_with_suffix)
add_library(func OBJECT func.c)
add_executable(3_byte_order 3_byte_order.c)
add_executable(function_test function_test.c)
add_executable(echo_server $<TARGET_OBJECTS:func>  echo_server.c)
add_executable(echo_client  echo_client.c)
add_executable(daytime_server daytime_server.c)
add_executable(daytime_client  daytime_client.c)
